Fix card and table examples to fit better on mobile

--- a/pages/themes/playground.module.css
+++ b/pages/themes/playground.module.css
@@ -57,6 +57,39 @@
   width: 160px;
 }
 
+/**
+ * Hero
+ */
+.PlaygroundHeroContainer {
+  margin-inline: calc(var(--space-5) * -1);
+}
+
+.PlaygroundHeroContent {
+  padding-block: var(--space-7);
+  padding-inline: var(--space-5);
+}
+
+@media (min-width: 520px) {
+  .PlaygroundHeroContainer {
+    margin-inline: 0;
+  }
+
+  .PlaygroundHeroContent {
+    padding-block: 100px;
+    padding-inline: 100px;
+  }
+}
+
+@media (min-width: 900px) {
+  .PlaygroundHeroContainer {
+    width: 1000px;
+    margin-inline: 0;
+  }
+}
+
+/**
+ * Docs link
+ */
 @media (hover: hover) {
   .PlaygroundDocsLink {
     opacity: 0;
@@ -65,5 +98,11 @@
 
   .PlaygroundSection:hover .PlaygroundDocsLink {
     opacity: 1;
+  }
+}
+
+@media (hover: none) {
+  .PlaygroundDocsLink {
+    display: none;
   }
 }
